all specs passed

--- a/app/views/figures/new.erb
+++ b/app/views/figures/new.erb
@@ -1,6 +1,6 @@
 <h1>Create a New Figure</h1>
 
-<form action="/figures" method="post">
+<form action="/figures/new" method="post">
   <p>Figure's Name: <input type="text" name="figure[name]" id="figure_name"></p>
   <br>
 
