--- a/app/views/landmarks/new.erb
+++ b/app/views/landmarks/new.erb
@@ -1,7 +1,7 @@
 <h1>Create a new Landmark</h1>
 
-<form action="index.html" method="post">
-  <p><input type="text" name="landmark[name]" id="landmark[name]"></p>
-  <p><input type="text" name="landmark[year_completed]" id="landmark[year_completed]"></p>
+<form action="/landmarks/new" method="post">
+  <p>Landmark Name:<input type="text" name="landmark[name]" id="landmark_name"></p>
+  <p>Landmark Year Completed: <input type="text" name="landmark_year_completed" id="landmark[year_completed]"></p>
   <input type="submit" id="Create New Landmark" value="Create New Landmark">
 </form>
