change edit landmark for patch rather than post

--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -1,7 +1,7 @@
 <h1>Update <%= @landmark.name %></h1>
 
 <form action="/landmarks/<%=@landmark.id%>" method="post">
-  <!-- <input id="hidden" type="hidden" name="_method" value="patch"> -->
+  <input id="hidden" type="hidden" name="_method" value="patch">
 
   <p>Landmark Name:<input type="text" name="landmark[name]" value="<%=@landmark.name%>" id="name"></p>
 
